inserta Mensaje aquí

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </button></a>
         <div class="dado">
             <img class="dado_img" src="">
+            <h1>hola</h1>
         </div>
     </div>
     <script src="script.js"></script>
